copied:     docker/download_models.sh -> #download_models.sh# 	new file:   .#download_models.sh 	modified:   .gitignore 	modified:   .travis.yml 	modified:   LICENSE 	modified:   MANIFEST.in 	modified:   Readme.md 	new file:   __pycache__/util.cpython-36.pyc 	modified:   bridge.cpp 	modified:   bridge.h 	modified:   docker/Dockerfile 	modified:   docker/Dockerfile-gpu 	new file:   docker/cfg/coco.data 	new file:   docker/cfg/yolov3.cfg 	new file:   docker/data/coco.names 	modified:   docker/docker_demo.py 	modified:   docker/download_models.sh 	modified:   docker/input/download_sample_images.sh 	new file:   docker/input/test1.JPG 	new file:   docker/nohup.out 	new file:   docker/output/test1.JPG 	modified:   docker/run-gpu.sh 	modified:   image_demo.py 	modified:   makefile 	modified:   pydarknet.pxd 	modified:   pydarknet.pyx 	modified:   pypi_readme.md 	modified:   requirements.txt 	modified:   setup.py 	modified:   test_image.py 	modified:   util.py 	modified:   video_demo.py 	modified:   webcam_demo.py

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -41,6 +41,6 @@ RUN pip3 install cython
 RUN python3 setup.py build_ext --inplace
 
 ## Run test ##
-RUN sh download_models.sh
-ADD ./docker_demo.py /YOLO3-4-Py/docker_demo.py
+##RUN sh download_models.sh
+##ADD ./docker_demo.py /YOLO3-4-Py/docker_demo.py
 CMD ["python3", "docker_demo.py"]
