--- a/docker/Dockerfile-gpu
+++ b/docker/Dockerfile-gpu
@@ -35,8 +35,8 @@ ENV LD_LIBRARY_PATH /darknet
 
 ## Download and compile YOLO3-4-Py ##
 WORKDIR /
-RUN git clone https://github.com/madhawav/YOLO3-4-Py.git
-WORKDIR /YOLO3-4-Py
+RUN git clone https://github.com/JustusGammelgaard/CleanSlate.git
+WORKDIR /YOLO
 RUN apt-get install -y pkg-config
 RUN pip3 install pkgconfig cython numpy
 ENV GPU 1
@@ -44,9 +44,10 @@ ENV OPENCV 1
 RUN python3 setup.py build_ext --inplace
 
 ## Download Models ##
-ADD ./download_models.sh /YOLO3-4-Py/download_models.sh
+ADD ./download_models.sh /YOLO/download_models.sh
 RUN sh download_models.sh
 
 ## Run test ##
-ADD ./docker_demo.py /YOLO3-4-Py/docker_demo.py
+WORKDIR /YOLO/docker
+ADD ./docker_demo.py /YOLO/docker/docker_demo.py
 CMD ["python3", "docker_demo.py"]
