modified:   Dockerfile 	modified:   Dockerfile-gpu 	deleted:    input/Resized.jpg 	modified:   input/img1.jpg 	new file:   input/img10.jpg 	new file:   input/img2.jpg 	new file:   input/img3.jpg 	new file:   input/img4.jpg 	new file:   input/img5.jpg 	new file:   input/img6.jpg 	new file:   input/img7.jpg 	new file:   input/img8.jpg 	new file:   input/img9.jpg 	modified:   ../__pycache__/util.cpython-36.pyc 	deleted:    cfg/yolov3.cfg 	modified:   docker_demo.py 	modified:   ../download_models.sh 	modified:   ../image_demo.py 	cfg/yolov123.cfg 	output/Resized.jpg 	output/img1.jpg

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,17 +24,17 @@ RUN ldconfig
 ## Downloading and compiling darknet ##
 WORKDIR /
 RUN apt-get install -y git
-RUN git clone https://github.com/pjreddie/darknet.git
-WORKDIR /darknet
+RUN git clone https://github.com/JustusGammelgaard/darknet-1.git
+WORKDIR /darknet-1
 # Set OpenCV makefile flag
 RUN sed -i '/OPENCV=0/c\OPENCV=1' Makefile
 RUN make
-ENV DARKNET_HOME /darknet
-ENV LD_LIBRARY_PATH /darknet
+ENV DARKNET_HOME /darknet-1
+ENV LD_LIBRARY_PATH /darknet-1
 
 ## Download and compile YOLO3-4-Py ##
 WORKDIR /
-RUN git clone https://github.com/JustusGammelgaard/CleanSlate.git
+RUN git clone https://github.com/JustusGammelgaard/YOLO.git
 WORKDIR /YOLO
 RUN pip3 install pkgconfig
 RUN pip3 install cython
