--- a/docker/Dockerfile-gpu
+++ b/docker/Dockerfile-gpu
@@ -35,7 +35,7 @@ ENV LD_LIBRARY_PATH /darknet
 
 ## Download and compile YOLO3-4-Py ##
 WORKDIR /
-RUN git clone https://github.com/JustusGammelgaard/CleanSlate.git
+RUN git clone https://github.com/JustusGammelgaard/YOLO.git
 WORKDIR /YOLO
 RUN apt-get install -y pkg-config
 RUN pip3 install pkgconfig cython numpy
@@ -48,6 +48,6 @@ ADD ./download_models.sh /YOLO/download_models.sh
 RUN sh download_models.sh
 
 ## Run test ##
-WORKDIR /YOLO/docker
-ADD ./docker_demo.py /YOLO/docker/docker_demo.py
+##WORKDIR /YOLO/docker
+ADD ./docker_demo.py /YOLO/docker_demo.py
 CMD ["python3", "docker_demo.py"]
